# escboot-firmware

./: .gitmodules  CMakeLists.txt  LICENSE
bootloader/: CMakeLists.txt
bootloader/include/: bootloader.h  checksum.h  flash.h  main.h  secureboot.h  stm32_assert.h  stm32f4xx_hal_conf.h
bootloader/include/crypto/: ecc.h  entropy.h
bootloader/include/debug/: logging.h
bootloader/include/io/: gpio.h  serialwire.h  uart.h
bootloader/include/utils/: hexdump.h  micros.h  millis.h
bootloader/src/: bootloader.c  crc16.c  main.c  secureboot.c
bootloader/src/debug/: logging.c
bootloader/src/io/: gpio.c  serialwire.c
bootloader/src/utils/: hexdump.c  micros.c  millis.c
cmake/: gcc-arm-none-eabi.cmake  stm32-gcc-flags.cmake
libraries/: CMakeLists.txt
libraries/CMSIS/: CMakeLists.txt
libraries/STM32F0xx_HAL_Driver/: CMakeLists.txt
libraries/STM32F4xx_HAL_Driver/: CMakeLists.txt
libraries/at32/: CMakeLists.txt
libraries/stm32/: CMakeLists.txt
libraries/stm32/STM32_Cryptographic/: Release_Notes.html
